Agent query: Se ha detectado un error interno del servidor (500) al intentar acceder a la página de reporte de incidentes. ¿Cómo le gustaría proceder?
1. Intentar corregir el error de sesión actual y continuar con la verificación
2. Reiniciar el servidor y probar con una nueva sesión
3. Volver a un punto anterior usando el botón de rollback en el panel de chat

¿Cuál opción prefiere para continuar con la verificación?

Update CSRF token and add logging to incident reporting route.

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
       <p class="auth-subtitle">Ingresa tus credenciales para acceder a la app</p>
 
       <form action="/login" method="post" novalidate>
-        <input id="csrf_token" name="csrf_token" type="hidden" value="ImRkZDg2MTNmMWNiZGJhZThmYzcxM2ZjNTNmYTg3ZmFiZDM1NjBlZjgi.Z70Aaw.mUMgU2Z13tl9J7E3SspMjlFqOv8">
+        <input id="csrf_token" name="csrf_token" type="hidden" value="ImQzYWEzMjZkMDZhNjUwMDc1N2QyOTdlODg1NjRmNTI1YTk3MzIwZjAi.Z70Ayw.lMHJ2-W0BVPN6y7zx9T9LMmvgsk">
 
         <div class="form-group">
           <label for="username">Nombre de Usuario</label>
